Update via logo and fix some spacing stuff

--- a/nsvki/static/css/custom.css
+++ b/nsvki/static/css/custom.css
@@ -1,2 +1,7 @@
-body { overflow-x:hidden; }
-logo { padding:10px; }
+body {
+    overflow-x:hidden;
+}
+
+.logo {
+    padding:10px;
+}
